
    * Support for LSB-compliant packaging <http://www.linuxbase.org/>

    * Shell wildcards are allowed in "auth users" lines.

    * Merged UNC rsync+ patch to support creation of standalone patch
      sets.  By Bert J. Dempsey and Debra Weiss, updated by Jos
      Backus.  <http://www.ils.unc.edu/i2dsi/unc_rsync+.html>

    * IPv6 support based on a patch from KAME.net, on systems
      including modern versions of Linux, Solaris, and HP-UX.

  ENHANCEMENTS

    * Include/exclude cluestick: with -vv, print out whether files are
      included or excluded and why.

    * Many error messages have more friendly explanations and more
      details.

    * Manual page improvements plus scanty protocol documentation.

    * When running as --daemon in the background and using a "log
      file" rsyncd.conf directive, close the log file every time it is
      open when going to sleep on the socket.  This allows the log
      file to get cleaned out by another process.

    * Change to using libpopt rather than getopt for processing
      options.  This makes the code cleaner and the behaviour more
      consistent across platforms.  popt is included and built if not
      installed on the platform.

    * More details in --version, including note about whether 64-bit
      files, symlinks and hardlinks are supported.

    * MD4 code may use less CPU cycles.

    * Use mkstemp on systems where it is secure.  If we use mktemp,
      explain that we do it in a secure way.

    * --whole-file is the default when source and target are on the
        local machine.

  BUG FIXES:

    * Fix for various bugs causing rsync to hang.

    * Attempt to fix Large File Summit support on AIX.

    * Attempt to fix error handling lockup bug.

    * Give a non-0 exit code if *any* of the files we have been asked
      to transfer fail to transfer 

    * For log messages containing ridiculously long strings that might