@@ -252,8 +252,10 @@ if test x"$ac_cv_func_connect" = x"no"; then
     fi
 fi
 
+AC_CHECK_LIB(resolv, inet_ntop)
+
 AC_MSG_NOTICE([Looking in libraries: $LIBS])
-AC_REPLACE_FUNCS(getaddrinfo getnameinfo)
+AC_REPLACE_FUNCS(getaddrinfo getnameinfo inet_ntop inet_pton)
 
 AC_CHECK_MEMBER([struct sockaddr.sa_len], 
 		[ AC_DEFINE(HAVE_SOCKADDR_LEN) ],
@@ -270,15 +272,12 @@ if test x"$ac_cv_func_strcasecmp" = x"no"; then
     AC_CHECK_LIB(resolv, strcasecmp)
 fi
 
-AC_CHECK_LIB(resolv, inet_ntop)
-
 AC_FUNC_MEMCMP
 AC_FUNC_UTIME_NULL
 AC_CHECK_FUNCS(waitpid wait4 getcwd strdup strerror chown chmod mknod)
 AC_CHECK_FUNCS(fchmod fstat strchr readlink link utime utimes strftime)
 AC_CHECK_FUNCS(memmove lchown vsnprintf snprintf asprintf setsid glob strpbrk)
 AC_CHECK_FUNCS(strlcat strlcpy mtrace)
-AC_CHECK_FUNCS(inet_ntop inet_pton)
 
 AC_CACHE_CHECK([for working socketpair],rsync_cv_HAVE_SOCKETPAIR,[
 AC_TRY_RUN([#include <sys/types.h>
